@@ -1,4 +1,4 @@
 DIST 117669-k4guitune-1.1.0.tar.gz 188665 RMD160 ec162323700ee40dfdbc8216f2497d238a9a5c98 SHA1 44274f6bfac4c8a9fed7a1f2157bb6b347efadbe SHA256 4dca9bfbaa424ab5bb6b696fc92a5c925cd8c1769524b83413c4be4a7e68b651
-EBUILD k4guitune-1.1.0.ebuild 672 RMD160 40eb86445cb57307576ddc39a603007b97846dd9 SHA1 1ae2b2a192ded9c8028fc0a75e2aebea8ef2053c SHA256 2c6315ca786965fcac326b32596541544b8970eb6d0cd2e1b4d4d6678a788b1f
-MISC ChangeLog 386 RMD160 d39f906c8c2e4808c7fe0d9c2449cc0c29a84436 SHA1 b44a5060fb8e22742d774d08ece5f6b4cf154a2b SHA256 5fb6dadab21bd6b52085b67cf7a5332b802bab60b669d6bd72fb0cd4859e9bdc
+EBUILD k4guitune-1.1.0.ebuild 1033 RMD160 9bf22f6599b5df1e8c312272721c21a7553d0249 SHA1 4d62e1f64f01133e49d8b0bd9f40a93e911fff1b SHA256 4afd4c872ca05efccc44c48ae26ba03aa1a7a6c4d1424543a74d45e035000ff1
+MISC ChangeLog 524 RMD160 9319104c353fff73de7140c8d99b8755833e428e SHA1 55de9b0d4a30ef6b92eca8e5218042b0dac3f44f SHA256 3bc6ce6a396f1b38320e6e3dad940e3cb123594e41017c25b162f0623899bc5d
 MISC metadata.xml 179 RMD160 b883f5c6912f84aca19da8e3feb822cb6b617bb3 SHA1 780a3d3818c6d10b571275c76277de6eefde2807 SHA256 d00a9b479ff6574e2d3defd7122eb87842cf188a309349c98d2a56e39695364e
