@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/k4guitune
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/k4guitune/ChangeLog,v 1.1 2009/12/27 14:08:45 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/k4guitune/ChangeLog,v 1.2 2009/12/28 11:03:34 ssuominen Exp $
+
+  28 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
+  k4guitune-1.1.0.ebuild:
+  Fix handbook installation, thanks to Maciej Mrozowski.
 
 *k4guitune-1.1.0 (27 Dec 2009)
 
